--- a/examples/three-mesh-ui.html
+++ b/examples/three-mesh-ui.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
+	<script>
+		var vConsole = new VConsole();
+	</script>
 	<script src='https://unpkg.com/three-mesh-ui/dist/three-mesh-ui.js'></script>
 	<script type="module">
 
