--- a/examples/webgl_postprocessing_unreal_bloom_js.html
+++ b/examples/webgl_postprocessing_unreal_bloom_js.html
@@ -24,18 +24,18 @@
 			<a href="http://mjmurdock.com/" target="_blank" rel="noopener">Mike Murdock</a>, CC Attribution.
 		</div>
 
-		<script src="/lib/three.js_github_gonnavis/build/three.min.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/controls/OrbitControls.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/loaders/GLTFLoader.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/postprocessing/ShaderPass.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/postprocessing/EffectComposer.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/postprocessing/RenderPass.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/shaders/CopyShader.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/shaders/LuminosityHighPassShader.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/postprocessing/UnrealBloomPass.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/misc/Resizer.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/libs/stats.min.js"></script>
-		<script src="/lib/three.js_github_gonnavis/examples/js/libs/dat.gui.min.js"></script>
+		<script src="../build/three.min.js"></script>
+		<script src="./js/controls/OrbitControls.js"></script>
+		<script src="./js/loaders/GLTFLoader.js"></script>
+		<script src="./js/postprocessing/ShaderPass.js"></script>
+		<script src="./js/postprocessing/EffectComposer.js"></script>
+		<script src="./js/postprocessing/RenderPass.js"></script>
+		<script src="./js/shaders/CopyShader.js"></script>
+		<script src="./js/shaders/LuminosityHighPassShader.js"></script>
+		<script src="./js/postprocessing/UnrealBloomPass.js"></script>
+		<script src="./js/misc/Resizer.js"></script>
+		<script src="./js/libs/stats.min.js"></script>
+		<script src="./js/libs/dat.gui.min.js"></script>
 		<script>
 
 			let camera, stats;
