--- a/examples/webgl_loader_texture_ktx2_test_4_ktx2.html
+++ b/examples/webgl_loader_texture_ktx2_test_4_ktx2.html
@@ -35,12 +35,12 @@
 			scene.background = new THREE.Color( 0x202020 );
 
 			const camera = new THREE.PerspectiveCamera( 60, width / height, 0.1, 100 );
-			camera.position.set( 2, 1.5, 1 );
+			camera.position.set( 0,0, 1 );
 			camera.lookAt( scene.position );
 			scene.add( camera );
 
 			const controls = new OrbitControls( camera, renderer.domElement );
-			controls.autoRotate = true;
+			// controls.autoRotate = true;
 
 			// PlaneBufferGeometry UVs assume flipY=true, which compressed textures don't support.
 			const geometry = flipY( new THREE.PlaneBufferGeometry() );
@@ -66,7 +66,7 @@
 			// Samples: sample_etc1s.ktx2, sample_uastc.ktx2
 			new KTX2Loader()
 				.detectSupport( renderer )
-				.load( './textures/compressed/4.ktx2', ( texture ) => {
+				.load( './textures/compressed/6.ktx2', ( texture ) => {
 
 					console.info( `transcoded to ${formatStrings[ texture.format ]}` );
 
