--- a/examples/glsl_like_math.html
+++ b/examples/glsl_like_math.html
@@ -37,7 +37,7 @@
 		let c = calc(() => b + 0) // clone
 		let z = calc(() => a * 10 + b + c + vec3(0, 0, 2)) // do math expression calc
 
-		console.log(z);
+		console.log(z); // Vec3 {x: 10, y: 22, z: 32}
 
 	</script>
 
