--- a/examples/glsl_like_math.html
+++ b/examples/glsl_like_math.html
@@ -14,10 +14,10 @@
 
 		class Vec3 extends THREE.Vector3 {
 			static state = 'x'
-			static crosss = []
-			static indexX = 0
-			static indexY = 0
-			static indexZ = 0
+			static re_xs = []
+			static index_x = 0
+			static index_y = 0
+			static index_z = 0
 			constructor(x = 0, y = 0, z = 0) {
 				super(x, y, z)
 			}
@@ -33,37 +33,58 @@
 			Vec3.state = 'x'; result.x = fn();
 			Vec3.state = 'y'; result.y = fn();
 			Vec3.state = 'z'; result.z = fn();
-			Vec3.crosss = []
-			Vec3.indexX = 0
-			Vec3.indexY = 0
-			Vec3.indexZ = 0
+			Vec3.re_xs = []
+			Vec3.index_x = 0
+			Vec3.index_y = 0
+			Vec3.index_z = 0
 			return result
+		}
+		function dot(a, b) {
+			if (Vec3.state === 'x') {
+				let re_dot = a.clone().dot(b)
+				Vec3.re_xs.push(re_dot)
+				Vec3.index_x++
+				return re_dot
+			} else if (Vec3.state === 'y') {
+				return Vec3.re_xs[Vec3.index_y++]
+			} else if (Vec3.state === 'z') {
+				return Vec3.re_xs[Vec3.index_z++]
+			}
 		}
 		function cross(a, b) {
 			if (Vec3.state === 'x') {
-				let reCross = a.clone().cross(b)
-				Vec3.crosss.push(reCross)
-				Vec3.indexX++
-				return reCross
+				let re_cross = a.clone().cross(b)
+				Vec3.re_xs.push(re_cross)
+				Vec3.index_x++
+				return re_cross
 			} else if (Vec3.state === 'y') {
-				return Vec3.crosss[Vec3.indexY++]
+				return Vec3.re_xs[Vec3.index_y++]
 			} else if (Vec3.state === 'z') {
-				return Vec3.crosss[Vec3.indexZ++]
+				return Vec3.re_xs[Vec3.index_z++]
 			}
 		}
 
 		let a = vec3(1, 2, 3);
 		let b = vec3(4, 5, 6);
-		let z = calc(() => 0 + cross(a, b)) // do math expression calc
+		let z = calc(() => cross(a, b) + dot(a, b)) // do math expression calc
 
-		console.log(new THREE.Vector3(1, 2, 3).cross(new THREE.Vector3(4, 5, 6)))
-		console.log(z); // Vec3 {x: 10, y: 22, z: 32}
+		console.log(
+			new THREE.Vector3(1, 2, 3).cross(new THREE.Vector3(4, 5, 6))
+				.addScalar(new THREE.Vector3(1, 2, 3).dot(new THREE.Vector3(4, 5, 6)))
+		)
+		console.log(z);
 
 	</script>
 	<script>
 		// csonole_test
 		if (false) {
-			new THREE.Vector3(1, 2, 3).cross(new THREE.Vector3(4, 5, 6))
+			{
+				new THREE.Vector3(1, 2, 3).cross(new THREE.Vector3(4, 5, 6))
+			}
+			{
+				new THREE.Vector3(1, 2, 3).cross(new THREE.Vector3(4, 5, 6))
+					.addScalar(new THREE.Vector3(1, 2, 3).dot(new THREE.Vector3(4, 5, 6)))
+			}
 		}
 	</script>
 
