--- a/examples/glsl_like_math_cross_dot_ok.html
+++ b/examples/glsl_like_math_cross_dot_ok.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+	<div>glsl-like JavaScript Vec3 expression Demo (see devtool log)</div>
 	<script src="../build/three.js"></script>
 	<script>
 
