--- a/examples/webgl_postprocessing_ssrr.html
+++ b/examples/webgl_postprocessing_ssrr.html
@@ -2,42 +2,31 @@
 <html lang="en">
 
 <head>
-
-	<head>
-		<title>three.js webgl - postprocessing - Screen Space Reflection</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="main.css">
-	</head>
+	<title>three.js webgl - loaders - Draco loader</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<link type="text/css" rel="stylesheet" href="main.css">
+</head>
 
 <body>
+	<div id="container"></div>
 	<div id="info">
 		<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> -
-		<a href="https://github.com/mrdoob/three.js/pull/20156" target="_blank" rel="noopener">SSRrPass</a> demo by <a href="https://github.com/gonnavis" target="_blank">Vis</a>.<br />
-		based on <a href="https://threejs.org/examples/?q=physic#webgl_shading_physical" target="_blank" rel="noopener">this scene</a>
+		<a href="https://github.com/google/draco" target="_blank" rel="noopener">DRACO</a> loader
 	</div>
 
-	<!-- <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
-<script>
-  var vConsole = new VConsole();
-</script> -->
-
-	<!-- <script>window.THREE=true</script> -->
-	<!-- <script src="/lib/vs_util/vs_util.js"></script> -->
-
 	<script type="module">
-
 		import * as THREE from '../build/three.module.js';
 
 		import Stats from './jsm/libs/stats.module.js';
-
-		import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
 
 		import { OrbitControls } from './jsm/controls/OrbitControls.js'
 
 		import { GUI } from './jsm/libs/dat.gui.module.js';
 		import { EffectComposer } from './jsm/postprocessing/EffectComposer.js';
 		import { SSRrPass } from './jsm/postprocessing/SSRrPass.js';
+
+		import { DRACOLoader } from './jsm/loaders/DRACOLoader.js';
 
 		var params = {
 			enableSSR: true,
@@ -47,236 +36,88 @@
 		var gui
 		var isPerspectiveCamera = true
 
-		var container, stats;
-
-		var camera, scene, renderer;
+		var stats;
 
 		var mesh;
 
 		var controls;
 
-		var sunLight, pointLight, ambientLight;
+		let camera, scene, renderer;
 
-		var mixer;
+		const container = document.querySelector('#container');
 
-		var clock = new THREE.Clock();
-
-		var shadowCameraHelper, shadowConfig = {
-
-			shadowCameraVisible: false,
-			shadowCameraNear: 750,
-			shadowCameraFar: 4000,
-			shadowBias: - 0.0002
-
-		};
+		// Configure and create Draco decoder.
+		const dracoLoader = new DRACOLoader();
+		dracoLoader.setDecoderPath('js/libs/draco/');
+		dracoLoader.setDecoderConfig({ type: 'js' });
 
 		init();
 		animate();
 
 		function init() {
 
-			container = document.createElement('div');
-			document.body.appendChild(container);
-
-			// CAMERA
-
-			if (isPerspectiveCamera) {
-				camera = new THREE.PerspectiveCamera(90, window.innerWidth / window.innerHeight, 2, 10000);
-				camera.position.set(320.3799692585287, 340.3719443974168, 666.8602336478249);
-				// camera.position.set( -612.8787517743004,  518.3480614141735,  137.45500830289768);
-			} else {
-				var initialFrustumSize = 1000
-				var cameraNear = 1
-				var cameraFar = 2000
-				var aspect = window.innerWidth / window.innerHeight;
-				camera = new THREE.OrthographicCamera(initialFrustumSize * aspect / - 2, initialFrustumSize * aspect / 2, initialFrustumSize / 2, initialFrustumSize / - 2, cameraNear, cameraFar);
-				camera.position.set(394.8768477903498, 424.03752576248496, 815.0242032138592)
-			}
-			// window.camera=camera///test
-
-			// SCENE
+			camera = new THREE.PerspectiveCamera(35, window.innerWidth / window.innerHeight, 0.1, 15);
+			window.camera = camera
+			camera.position.set(0.13271600513224902, 0.3489546826045913, 0.43921296427927076);
 
 			scene = new THREE.Scene();
-			window.scene = scene
-			scene.fog = new THREE.Fog(0, 1000, 10000);
+			scene.background = new THREE.Color(0x443333);
+			scene.fog = new THREE.Fog(0x443333, 1, 4);
 
-			// TEXTURES
-			var textureLoader = new THREE.TextureLoader();
+			// Ground
+			const plane = new THREE.Mesh(
+				new THREE.PlaneGeometry(8, 8),
+				new THREE.MeshPhongMaterial({ color: 0x999999, specular: 0x101010 })
+			);
+			plane.rotation.x = - Math.PI / 2;
+			plane.position.y = 0.03;
+			plane.receiveShadow = true;
+			scene.add(plane);
 
-			var textureSquares = textureLoader.load("textures/patterns/bright_squares256.png");
-			textureSquares.repeat.set(50, 50);
-			textureSquares.wrapS = textureSquares.wrapT = THREE.RepeatWrapping;
-			textureSquares.magFilter = THREE.NearestFilter;
-			textureSquares.encoding = THREE.sRGBEncoding;
+			// Lights
+			const hemiLight = new THREE.HemisphereLight(0x443333, 0x111122);
+			scene.add(hemiLight);
 
-			var textureNoiseColor = textureLoader.load("textures/disturb.jpg");
-			textureNoiseColor.repeat.set(1, 1);
-			textureNoiseColor.wrapS = textureNoiseColor.wrapT = THREE.RepeatWrapping;
-			textureNoiseColor.encoding = THREE.sRGBEncoding;
+			const spotLight = new THREE.SpotLight();
+			spotLight.angle = Math.PI / 16;
+			spotLight.penumbra = 0.5;
+			spotLight.castShadow = true;
+			spotLight.position.set(- 1, 1, 1);
+			scene.add(spotLight);
 
-			var textureLava = textureLoader.load("textures/lava/lavatile.jpg");
-			textureLava.repeat.set(6, 2);
-			textureLava.wrapS = textureLava.wrapT = THREE.RepeatWrapping;
-			textureLava.encoding = THREE.sRGBEncoding;
+			dracoLoader.load('models/draco/bunny.drc', function (geometry) {
 
-			// GROUND
+				geometry.computeVertexNormals();
 
-			var groundMaterial = new THREE.MeshPhongMaterial({
-				shininess: 80,
-				color: 0xffffff,
-				specular: 0xffffff,
-				map: textureSquares
-			});
-
-			var planeGeometry = new THREE.PlaneBufferGeometry(100, 100);
-
-			var ground = new THREE.Mesh(planeGeometry, groundMaterial);
-			ground.position.set(0, 0, 0);
-			ground.rotation.x = - Math.PI / 2;
-			ground.scale.set(1000, 1000, 1000);
-			ground.receiveShadow = true;
-			scene.add(ground);
-
-			// MATERIALS
-
-			var materialLambert = new THREE.MeshPhongMaterial({ shininess: 50, color: 0xffffff, map: textureNoiseColor });
-			var materialPhong = new THREE.MeshPhongMaterial({ shininess: 50, color: 0xffffff, specular: 0x999999, map: textureLava });
-			var materialPhongCube = new THREE.MeshPhongMaterial({ shininess: 50, color: 0xffffff, specular: 0x999999, });
-
-			// OBJECTS
-
-			var sphereGeometry = new THREE.SphereBufferGeometry(100, 64, 32);
-			var torusGeometry = new THREE.TorusBufferGeometry(240, 60, 32, 64);
-			var cubeGeometry = new THREE.BoxBufferGeometry(150, 150, 150);
-
-			addObject(torusGeometry, materialPhong, 0, 100, 0, 0);
-			addObject(cubeGeometry, materialLambert, 350, 75, 300, 0);
-
-			mesh = addObject(sphereGeometry, materialPhongCube, 350, 100, - 350, 0);
-
-			function addObjectColor(geometry, color, x, y, z, ry) {
-
-				var material = new THREE.MeshPhongMaterial({ color: 0xffffff });
-
-				return addObject(geometry, material, x, y, z, ry);
-
-			}
-
-			function addObject(geometry, material, x, y, z, ry) {
-
-				var tmpMesh = new THREE.Mesh(geometry, material);
-
-				tmpMesh.material.color.offsetHSL(0.1, - 0.1, 0);
-
-				tmpMesh.position.set(x, y, z);
-
-				tmpMesh.rotation.y = ry;
-
-				tmpMesh.castShadow = true;
-				tmpMesh.receiveShadow = true;
-
-				scene.add(tmpMesh);
-
-				return tmpMesh;
-
-			}
-
-			var bigCube = new THREE.BoxBufferGeometry(50, 500, 50);
-			var midCube = new THREE.BoxBufferGeometry(50, 200, 50);
-			var smallCube = new THREE.BoxBufferGeometry(100, 100, 100);
-
-			addObjectColor(bigCube, 0xff0000, - 500, 250, 0, 0);
-			addObjectColor(smallCube, 0xff0000, - 500, 50, - 150, 0);
-
-			addObjectColor(midCube, 0x00ff00, 500, 100, 0, 0);
-			addObjectColor(smallCube, 0x00ff00, 500, 50, - 150, 0);
-
-			addObjectColor(midCube, 0x0000ff, 0, 100, - 500, 0);
-			addObjectColor(smallCube, 0x0000ff, - 150, 50, - 500, 0);
-
-			addObjectColor(midCube, 0xff00ff, 0, 100, 500, 0);
-			addObjectColor(smallCube, 0xff00ff, - 150, 50, 500, 0);
-
-			addObjectColor(new THREE.BoxBufferGeometry(500, 10, 10), 0xffff00, 0, 600, 0, Math.PI / 4);
-			addObjectColor(new THREE.BoxBufferGeometry(250, 10, 10), 0xffff00, 0, 600, 0, 0);
-
-			addObjectColor(new THREE.SphereBufferGeometry(100, 32, 26), 0xffffff, - 300, 100, 300, 0);
-
-			// MORPHS
-
-			var loader = new GLTFLoader();
-
-			loader.load("models/gltf/SittingBox.glb", function (gltf) {
-
-				var mesh = gltf.scene.children[0];
-				mesh.geometry = mesh.geometry.toNonIndexed()
-				mesh.geometry.computeVertexNormals()
-
-				mixer = new THREE.AnimationMixer(mesh);
-
-				mixer.clipAction(gltf.animations[0]).setDuration(10).play();
-
-				var s = 200;
-				mesh.scale.set(s, s, s);
-
+				const material = new THREE.MeshStandardMaterial({ color: 0x606060 });
+				const mesh = new THREE.Mesh(geometry, material);
 				mesh.castShadow = true;
 				mesh.receiveShadow = true;
-
 				scene.add(mesh);
+
+				// Release decoder resources.
+				dracoLoader.dispose();
 
 			});
 
-			// LIGHTS
-
-			ambientLight = new THREE.AmbientLight(0x3f2806);
-			scene.add(ambientLight);
-
-			pointLight = new THREE.PointLight(0xffaa00, 1, 5000);
-			scene.add(pointLight);
-
-			sunLight = new THREE.DirectionalLight(0xffffff, 0.3);
-			sunLight.position.set(1000, 2000, 1000);
-			sunLight.castShadow = true;
-			sunLight.shadow.camera.top = 750;
-			sunLight.shadow.camera.bottom = - 750;
-			sunLight.shadow.camera.left = - 750;
-			sunLight.shadow.camera.right = 750;
-			sunLight.shadow.camera.near = shadowConfig.shadowCameraNear;
-			sunLight.shadow.camera.far = shadowConfig.shadowCameraFar;
-			sunLight.shadow.mapSize.set(1024, 1024);
-			sunLight.shadow.bias = shadowConfig.shadowBias;
-
-			scene.add(sunLight);
-
-			// SHADOW CAMERA HELPER
-
-			shadowCameraHelper = new THREE.CameraHelper(sunLight.shadow.camera);
-			shadowCameraHelper.visible = shadowConfig.shadowCameraVisible;
-			scene.add(shadowCameraHelper);
-
-			// RENDERER
-
-			renderer = new THREE.WebGLRenderer({ antialias: false });
-			// renderer.setPixelRatio( window.devicePixelRatio );
+			// renderer
+			renderer = new THREE.WebGLRenderer({ antialias: true });
+			renderer.setPixelRatio(window.devicePixelRatio);
 			renderer.setSize(window.innerWidth, window.innerHeight);
+			renderer.outputEncoding = THREE.sRGBEncoding;
+			renderer.shadowMap.enabled = true;
 			container.appendChild(renderer.domElement);
 
 			//
 
-			renderer.shadowMap.enabled = true;
-			renderer.shadowMap.type = THREE.PCFSoftShadowMap;
-			renderer.outputEncoding = THREE.sRGBEncoding;
-
-			//
-
 			controls = new OrbitControls(camera, renderer.domElement);
+			controls.target.set(0, 0.1, 0);
+			controls.update()
 
 			// STATS
 
 			stats = new Stats();
 			container.appendChild(stats.dom);
-
-			// EVENTS
 
 			window.addEventListener('resize', onWindowResize, false);
 
@@ -316,7 +157,7 @@
 			});
 			gui.add(ssrrPass, 'opacity').min(0).max(1);
 			if (isPerspectiveCamera) {
-				ssrrPass.surfDist = .007
+				ssrrPass.surfDist = 0.0021
 				gui.add(ssrrPass, 'surfDist').min(0).max(.02).step(.0001);
 			} else {
 				ssrrPass.surfDist = 2
@@ -330,7 +171,6 @@
 
 		}
 
-		//
 
 		function onWindowResize() {
 
@@ -341,8 +181,6 @@
 			composer.setSize(window.innerWidth, window.innerHeight);
 
 		}
-
-		//
 
 		function animate() {
 
@@ -356,18 +194,6 @@
 
 		function render() {
 
-			// update
-
-			var delta = clock.getDelta();
-
-			controls.update();
-
-			if (mixer) {
-
-				mixer.update(delta);
-
-			}
-
 			if (params.enableSSR) {
 				composer.render();
 			} else {
@@ -375,9 +201,7 @@
 			}
 
 		}
-
 	</script>
-
 </body>
 
 </html>
