--- a/examples/webgl_postprocessing_ssrr.html
+++ b/examples/webgl_postprocessing_ssrr.html
@@ -30,6 +30,7 @@
 
 		var params = {
 			enableSSR: true,
+			isOrbitControls: false,
 		}
 		var composer
 		var ssrrPass
@@ -113,6 +114,7 @@
 			controls = new OrbitControls(camera, renderer.domElement);
 			controls.target.set(0, 0.1, 0);
 			controls.update()
+			controls.enabled = params.isOrbitControls
 
 			// STATS
 
@@ -141,6 +143,9 @@
 			gui.add(params, 'enableSSR').name('Enable SSRr');
 			gui.add(ssrrPass, 'isDistanceAttenuation');
 			gui.add(ssrrPass, 'maxDistance').min(0).max(2000);
+			gui.add(params, 'isOrbitControls').onChange(() => {
+				controls.enabled = params.isOrbitControls
+			})
 			gui.add(ssrrPass, 'isFresnel');
 			gui.add(ssrrPass, 'isBouncing')
 			gui.add(ssrrPass, 'output', {
@@ -193,6 +198,15 @@
 		}
 
 		function render() {
+
+			if (!params.isOrbitControls) {
+				const timer = Date.now() * 0.0003;
+
+				camera.position.x = Math.sin(timer) * 0.5;
+				camera.position.y = 0.25;
+				camera.position.z = Math.cos(timer) * 0.5;
+				camera.lookAt(0, 0.1, 0);
+			}
 
 			if (params.enableSSR) {
 				composer.render();
