--- a/examples/webgl_postprocessing_ssrr.html
+++ b/examples/webgl_postprocessing_ssrr.html
@@ -30,7 +30,7 @@
 
 		var params = {
 			enableSSR: true,
-			isOrbitControls: false,
+			isOrbitControls: true,
 		}
 		var composer
 		var ssrrPass
@@ -59,7 +59,7 @@
 
 			camera = new THREE.PerspectiveCamera(35, window.innerWidth / window.innerHeight, 0.1, 15);
 			window.camera = camera
-			camera.position.set(0.13271600513224902, 0.3489546826045913, 0.43921296427927076);
+			camera.position.set(-0.13412050485026153, 0.33049685604126683, 0.44875704956446355);
 
 			scene = new THREE.Scene();
 			scene.background = new THREE.Color(0x443333);
