--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -35,13 +35,15 @@
 		import { GUI } from './jsm/libs/dat.gui.module.js';
 		import { EffectComposer } from './jsm/postprocessing/EffectComposer.js';
 		import { SSRPass } from './jsm/postprocessing/SSRPass.js';
+		import { Reflector } from './jsm/objects/Reflector.js';
 
 		import { DRACOLoader } from './jsm/loaders/DRACOLoader.js';
 
 		let params = {
 			enableSSR: true,
-			isOrbitControls: false,
+			isOrbitControls: true,
 			isOtherMeshes: true,
+			isReflector: true,
 		}
 		let composer
 		let ssrPass
@@ -52,6 +54,7 @@
 		let controls;
 		let camera, scene, renderer;
 		let otherMeshes = []
+		let reflector
 
 		const container = document.querySelector('#container');
 
@@ -133,6 +136,19 @@
 				otherMeshes.push(mesh)
 			}
 
+			{
+				const geometry = new THREE.PlaneBufferGeometry(100, 100);
+				reflector = new Reflector(geometry, {
+					clipBias: 0.003,
+					textureWidth: window.innerWidth,
+					textureHeight: window.innerHeight,
+					color: 0x888888
+				});
+				reflector.position.y = plane.position.y + .0001;
+				reflector.rotation.x = -Math.PI / 2
+				scene.add(reflector);
+			}
+
 			// renderer
 			renderer = new THREE.WebGLRenderer({ antialias: false });
 			// renderer.setPixelRatio(window.devicePixelRatio);
@@ -176,6 +192,13 @@
 			gui.add(ssrPass, 'isDistanceAttenuation');
 			ssrPass.maxDistance = .1
 			gui.add(ssrPass, 'maxDistance').min(0).max(1).step(.01);
+			gui.add(params, 'isReflector').onChange(() => {
+				if (params.isReflector) {
+					reflector.visible = true
+				} else {
+					reflector.visible = false
+				}
+			})
 			gui.add(params, 'isOrbitControls').onChange(() => {
 				controls.enabled = params.isOrbitControls
 			})
