--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -147,6 +147,7 @@
 				reflector.position.y = plane.position.y + .0001;
 				reflector.rotation.x = -Math.PI / 2
 				scene.add(reflector);
+				window.reflector = reflector///test
 			}
 
 			// renderer
