why reflector's shader totally unused?

--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -229,6 +229,7 @@
 				encoding: THREE.sRGBEncoding,
 				isPerspectiveCamera: isPerspectiveCamera,
 				useReflector:true,
+				reflector,
 				reflectorRenderTarget,
 				// morphTargets: true,
 			});
