--- a/examples/physics_ammo_volume_ssr.html
+++ b/examples/physics_ammo_volume_ssr.html
@@ -31,7 +31,8 @@
 
 		<script type="module">
 
-			import * as THREE from '../src/Three.js';
+			// import * as THREE from '../src/Three.js';
+			import * as THREE from '../build/three.module.js';
 
 			import Stats from './jsm/libs/stats.module.js';
 
