--- a/examples/webgl_postprocessing_ssr_selective.html
+++ b/examples/webgl_postprocessing_ssr_selective.html
@@ -32,7 +32,8 @@
 </script> -->
 <script type="module">
 
-	import * as THREE from '../src/Three.js';
+	// import * as THREE from '../src/Three.js';
+	import * as THREE from '../build/three.module.js';
 
 	import Stats from './jsm/libs/stats.module.js';
 
