--- a/examples/webgl_animation_keyframes_ssr.html
+++ b/examples/webgl_animation_keyframes_ssr.html
@@ -190,8 +190,8 @@ gui.add(ssrPass, 'isInfiniteThick');
 ssrPass.thickTolerance=.1
 gui.add(ssrPass, 'thickTolerance').min(0).max(1).step(.01);
 gui.add(ssrPass, 'isBlur');
-gui.add(ssrPass, 'isNoise');
-gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.001);
+// gui.add(ssrPass, 'isNoise');
+// gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.001);
 
 
 			function animate() {
