--- a/examples/webgl_postprocessing_ssr_selective.html
+++ b/examples/webgl_postprocessing_ssr_selective.html
@@ -328,8 +328,8 @@
 		ssrPass.thickTolerance=.3
 		gui.add(ssrPass, 'thickTolerance').min(0).max(1).step(.01);
 		gui.add(ssrPass, 'isBlur');
-		gui.add(ssrPass, 'isNoise');
-		gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.001);
+		// gui.add(ssrPass, 'isNoise');
+		// gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.001);
 
 	}
 
